rename /auth/token/user to /auth/token/user/session
